Mise en page et correction du contraste page contact

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -50,7 +50,7 @@ template {
     display: none
 }
 
-a {
+/*a {
     background-color: transparent
 }
 
@@ -3156,10 +3156,10 @@ output {
 }
 
 .form-control:focus {
-    border-color: #66afe9;
+    border-color: #52F2E2;
     outline: 0;
-    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 8px rgba(102, 175, 233, .6);
-    box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 8px rgba(102, 175, 233, .6)
+    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 8px rgba(82, 242, 226, .6);
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 8px rgba(82, 242, 226, .6)
 }
 
 .form-control::-moz-placeholder {
